Now using pegasus to setup flink.
Tried submitting Wordcount.jar through WebUI and it seemed to complete.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ kafka-producer/\.idea/
 
 # Historic data doesn't need to be committed
 data/
+
+setup/flink/flink-manager\.yml
+
+setup/flink/flink-workers\.yml
