Ignores for personalized pegasus templates.
I'm pushing only template files because the actual YAMLs are specific to my AWS and would not be useful to anyone else.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ data/
 setup/flink/flink-manager\.yml
 
 setup/flink/flink-workers\.yml
+
+setup/spark/spark-master\.yml
+
+setup/spark/spark-workers\.yml
+
+setup/redis/redis\.yml
