--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@ setup/spark/spark-master\.yml
 setup/spark/spark-workers\.yml
 
 setup/redis/redis\.yml
+
+setup/cassandra/cassandra-master\.yml
+
+setup/cassandra/cassandra-workers\.yml
+
+theory/data_flow_redis\.png
